--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 		<link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
 		<link rel="stylesheet" href="{{ site.baseurl }}/css/screen.css">
 		<link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/images/Final Logos_Logo_Full Color.png">
-		<link rel="icon" type="image/png" href="{{ site.baseurl }}/favicon.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="{{ site.baseurl }}/images/Final Logos_Icon_Full Color.png" sizes="32x32">
 
 		{% if jekyll.environment == 'production' and site.google_analytics_key != '' %}
 			<script>
