--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,29 +47,32 @@
 							{% include icons/footer.html icon="email" %} {{ site.data.company.email }}
 						</a>
 					</p>
-					<p class="phone">
+					<!-- <p class="phone">
 						<a href="tel:{{ site.data.company.phone | replace: ' ', '-' }}">
 							{% include icons/footer.html icon="phone" %} {{ site.data.company.phone }}
 						</a>
-					</p>
+					</p> -->
 				</div>
 
 				<div class="sharing">
 					<a class="facebook" href="https://www.facebook.com/{{ site.data.company.facebook }}">
 						{% include icons/social-media.html social_icon="facebook" %}
 					</a>
-					<a class="twitter" href="https://twitter.com/{{ site.data.company.twitter }}">
+					<a class="instagram" href="https://instagram.com/{{ site.data.company.instagram }}">
+						{% include icons/social-media.html social_icon="instagram" %}
+					</a>
+					<!--<a class="twitter" href="https://twitter.com/{{ site.data.company.twitter }}">
 						{% include icons/social-media.html social_icon="twitter" %}
 					</a>
 					<a class="youtube" href="https://youtube.com/{{ site.data.company.youtube }}">
 						{% include icons/social-media.html social_icon="youtube" %}
-					</a>
+					</a> -->
 				</div>
 			</div>
 		</footer>
 		<p class="copyright">
-			<a href="https://cloudcannon.com/">
-				Template by CloudCannon
+			<a href="https://buzztender.app/">
+				©2022-2023 All Rights Reserved. BuzzTender LLP is a registered trademark.
 			</a>
 		</p>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
