--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,11 +47,11 @@
 							{% include icons/footer.html icon="email" %} {{ site.data.company.email }}
 						</a>
 					</p>
-					<!-- <p class="phone">
-						<a href="tel:{{ site.data.company.phone | replace: ' ', '-' }}">
-							{% include icons/footer.html icon="phone" %} {{ site.data.company.phone }}
+					<p class="legal">
+						<a href='/legal/landing'>
+							{% include icons/footer.html icon="legal" %} {{ site.data.company.legal }}
 						</a>
-					</p> -->
+					</p> 
 				</div>
 
 				<div class="sharing">
